RESOLVED FIXED40258
[Qt] DragControllerQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40258
Summary [Qt] DragControllerQt.cpp has coding-style errors
Anders Bakken
Reported 2010-06-07 13:01:12 PDT
[Qt] DragControllerQt.cpp has coding-style errors
Attachments
Patch (1.16 KB, patch)
2010-06-07 13:01 PDT, Anders Bakken
levin: review-
Fixing previous patch submitted by Anders Bakken to fix the coding-style on DragControllerQt.cpp (1.12 KB, patch)
2011-04-05 09:38 PDT, Rafael Brandao
no flags
Anders Bakken
Comment 1 2010-06-07 13:01:36 PDT
David Levin
Comment 2 2010-06-09 09:15:18 PDT
Comment on attachment 58076 [details] Patch >+ No new tests. (OOPS!) :(
Jędrzej Nowacki
Comment 3 2010-06-15 06:30:08 PDT
WebCore/ChangeLog:8 + No new tests. (OOPS!) You should remove this line. WebCore/page/qt/DragControllerQt.cpp:53 + // FIXME: This logic is incomplete '.' at the end.
Rafael Brandao
Comment 4 2011-04-05 09:38:54 PDT
Created attachment 88255 [details] Fixing previous patch submitted by Anders Bakken to fix the coding-style on DragControllerQt.cpp
WebKit Commit Bot
Comment 5 2011-04-05 20:56:51 PDT
Comment on attachment 88255 [details] Fixing previous patch submitted by Anders Bakken to fix the coding-style on DragControllerQt.cpp Clearing flags on attachment: 88255 Committed r83014: <http://trac.webkit.org/changeset/83014>
WebKit Commit Bot
Comment 6 2011-04-05 20:56:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.