2011-04-05  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] DragControllerQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40258

        This patch does not require new test cases.

        * page/qt/DragControllerQt.cpp:
        (WebCore::DragController::dragOperation):

Canonical link: https://commits.webkit.org/72794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83014 268f45cc-cd09-0410-ab3c-d52691b4dbfc