Source/WebCore/page/qt/DragControllerQt.cpp
@@ -50,7 +50,7 @@ bool DragController::isCopyKeyDown(DragData*)
     
 DragOperation DragController::dragOperation(DragData* dragData)
 {
-    //FIXME: This logic is incomplete
+    // FIXME: This logic is incomplete.
     if (dragData->containsURL(0))
         return DragOperationCopy;
         
